not implemented yet

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div id="right">
-        <iframe src="specs.html" />
+        <iframe src="output.html" />
     </div>
 </body>
 
