--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <style type="text/css">
       #left {
         position: absolute;
-        top: 1%;
-        bottom: 1%;
-        left: 1%;
-        right: 50.5%;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 50%;
       }
 
       #right {
         position: absolute;
-        top: 1%;
-        bottom: 1%;
-        left: 50.5%;
-        right: 1%;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        right: 0;
       }
 
       .CodeMirror, iframe {
