--- a/output.html
+++ b/output.html
@@ -5,6 +5,10 @@
     <script type="text/javascript" src="lib/lazy.js/lazy.js"></script>
 
     <style type="text/css">
+      body {
+        padding: 10px;
+      }
+
       table {
         width: 100%;
         border-collapse: collapse;
@@ -63,7 +67,7 @@
         right: 0;
         height: 40px;
         background-color: #000;
-        opacity: 0.5;
+        opacity: 0.75;
         z-index: -1;
       }
     </style>
